--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=DBExamen;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "key": "EsteEsUnSuperSecretoMuyLargoYSeguro123456",
+    "Issuer": "ITM",
+    "Audience": "ITMUsers"
   },
   "AllowedHosts": "*"
 }
